imagens atualizadas + versão teste pra mostrar pro marcelo

--- a/areas-atuacao.html
+++ b/areas-atuacao.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="utf-8">
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg bg-white sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img class="logo" src="./assets/images/logo_marcelo_teste.png" alt="">
+                <img class="logo" src="./assets/images/marcelo-andreolli-logo.png" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -79,7 +79,16 @@
                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
-                                    Atuação na defesa dos direitos de trabalhadores em ações de reconhecimento de vínculo, verbas rescisórias, horas extras, assédio moral, acidentes de trabalho e estabilidade provisória, sempre com foco na valorização da dignidade do trabalho humano.
+                                    <ol>
+                                        <li class="text-start">
+                                            <h4>Reconhecimento de Vínculo Empregatício</h4>
+                                            <p>Busca comprovar a relação de emprego quando não registrada formalmente, garantindo direitos trabalhistas como FGTS e férias.</p>
+                                        </li>
+                                        <li class="text-start">
+                                            <h4>Verbas Rescisórias</h4>
+                                            <p>Busca comprovar a relação de emprego quando não registrada formalmente, garantindo direitos trabalhistas como FGTS e férias.</p>
+                                        </li>
+                                    </ol>
                                 </div>
                                 <div class="modal-footer">
                                     <a href="https://wa.me/5561999044771" class="btn btn-success me-2">
@@ -264,12 +273,12 @@
                         <h5 class="mb-0 text-white">ÁREAS DE ATUAÇÃO</h5>
                         <div class="line"></div>
                         <ul>
-                            <li><a href="#">Direito do Trabalho - Pró Empregado</a></li>
-                            <li><a href="#">Direito do Trabalho - Patronal</a></li>
-                            <li><a href="#">Direito da Família</a></li>
-                            <li><a href="#">Direito Imobiliário</a></li>
-                            <li><a href="#">Direito Sucessório</a></li>
-                            <li><a href="#">Relações Comerciais e Contratuais</a></li>
+                            <li><a href="#services">Direito do Trabalho - Pró Empregado</a></li>
+                            <li><a href="#services">Direito do Trabalho - Patronal</a></li>
+                            <li><a href="#services">Direito da Família</a></li>
+                            <li><a href="#services">Direito Imobiliário</a></li>
+                            <li><a href="#services">Direito Sucessório</a></li>
+                            <li><a href="#services">Relações Comerciais e Contratuais</a></li>
                         </ul>
                     </div>
                     <div class="col-lg-3 col-sm-6">
