--- a/contato.html
+++ b/contato.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="utf-8">
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg bg-white sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img class="logo" src="./assets/images/logo_marcelo_teste.png" alt="">
+                <img class="logo" src="./assets/images/marcelo-andreolli-logo.png" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -104,12 +104,12 @@
                         <h5 class="mb-0 text-white">ÁREAS DE ATUAÇÃO</h5>
                         <div class="line"></div>
                         <ul>
-                            <li><a href="#">Direito do Trabalho - Pró Empregado</a></li>
-                            <li><a href="#">Direito do Trabalho - Patronal</a></li>
-                            <li><a href="#">Direito da Família</a></li>
-                            <li><a href="#">Direito Imobiliário</a></li>
-                            <li><a href="#">Direito Sucessório</a></li>
-                            <li><a href="#">Relações Comerciais e Contratuais</a></li>
+                            <li><a href="areas-atuacao.html">Direito do Trabalho - Pró Empregado</a></li>
+                            <li><a href="areas-atuacao.html">Direito do Trabalho - Patronal</a></li>
+                            <li><a href="areas-atuacao.html">Direito da Família</a></li>
+                            <li><a href="areas-atuacao.html">Direito Imobiliário</a></li>
+                            <li><a href="areas-atuacao.html">Direito Sucessório</a></li>
+                            <li><a href="areas-atuacao.html">Relações Comerciais e Contratuais</a></li>
                         </ul>
                     </div>
                     <div class="col-lg-3 col-sm-6">
