--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="utf-8">
@@ -136,7 +136,7 @@
                         <div class="team-member-content">
                             <h4 class="text-white">Dr. Marcelo Andreolli</h4>
                             <p class="mb-0 text-white">Advogado/Sócio</p>
-                            <a href="equipe.html" class="btn btn-brand-light mt-3">Currículo</a>
+                            <a href="equipe.html#marcelo" class="btn btn-brand-light mt-3">Currículo</a>
                         </div>
                     </div>
                 </div>
@@ -148,7 +148,7 @@
                         <div class="team-member-content">
                             <h4 class="text-white">Dr. Arimatéa Fonseca</h4>
                             <p class="mb-0 text-white">Advogado/Sócio</p>
-                            <a href="equipe.html" class="btn btn-brand-light mt-3">Currículo</a>
+                            <a href="equipe.html#arimatea" class="btn btn-brand-light mt-3">Currículo</a>
                         </div>
                     </div>
                 </div>
@@ -212,12 +212,12 @@
                         <h5 class="mb-0 text-white">ÁREAS DE ATUAÇÃO</h5>
                         <div class="line"></div>
                         <ul>
-                            <li><a href="#">Direito do Trabalho - Pró Empregado</a></li>
-                            <li><a href="#">Direito do Trabalho - Patronal</a></li>
-                            <li><a href="#">Direito da Família</a></li>
-                            <li><a href="#">Direito Imobiliário</a></li>
-                            <li><a href="#">Direito Sucessório</a></li>
-                            <li><a href="#">Relações Comerciais e Contratuais</a></li>
+                            <li><a href="areas-atuacao.html">Direito do Trabalho - Pró Empregado</a></li>
+                            <li><a href="areas-atuacao.html">Direito do Trabalho - Patronal</a></li>
+                            <li><a href="areas-atuacao.html">Direito da Família</a></li>
+                            <li><a href="areas-atuacao.html">Direito Imobiliário</a></li>
+                            <li><a href="areas-atuacao.html">Direito Sucessório</a></li>
+                            <li><a href="areas-atuacao.html">Relações Comerciais e Contratuais</a></li>
                         </ul>
                     </div>
                     <div class="col-lg-3 col-sm-6">
