--- a/sobre.html
+++ b/sobre.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="utf-8">
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg bg-white sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img class="logo" src="./assets/images/logo_marcelo_teste.png" alt="">
+                <img class="logo" src="./assets/images/marcelo-andreolli-logo.png" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -73,8 +73,16 @@
                             <i class="ri-user-5-fill"></i>
                         </div>
                         <div>
-                            <h5>Tradição Jurídica</h5>
-                            <p>O escritório teve início apenas com o Dr. Arimatéa, advogado desde 1988, que fundou oficialmente a banca em 1999, consolidando sua reputação pela atuação firme e ética na defesa dos trabalhadores em ações contra grande empresas. Ao longo dos anos, acumulou vitórias expressivas e reconhecimento pela dedicação às causas dos trabalhadores. Em 2017, seu filho, Marcelo Andreolli, ingressou na advocacia, trazendo uma nova energia e visão moderna ao escritório. Hoje, pai e filho atuam em sociedade, unindo tradição e inovação para oferecer um atendimento jurídico de excelência e alinhado aos desafios contemporâneos.</p>
+                            <h5>NOSSA HISTÓRIA – UMA HOMENAGEM AO FUNDADOR</h5>
+                            <p>O nosso escritório nasceu do trabalho, da dedicação e do ideal de um homem que fez da advocacia sua missão: o Dr. Arimatéia. Desde 1990, ele se tornou uma referência na advocacia trabalhista em Taguatinga e em todo o Distrito Federal, guiado por um profundo senso de justiça, ética inabalável e uma técnica refinada, construída com anos de estudo e experiência.
+                                Mas sua contribuição foi muito além da atuação nos tribunais. Por mais de uma década, o Dr. Arimatéia exerceu o magistério com paixão, ensinando Direito do Trabalho em instituições renomadas da capital federal. Ali, não formou apenas alunos — formou juristas, despertou vocações e espalhou conhecimento com generosidade e sabedoria. É autor de obras jurídicas respeitadas, consultor de colegas em causas complexas e, acima de tudo, uma inspiração constante para quem busca fazer do Direito uma ferramenta de transformação.
+                                Para mim, Marcelo Andreolli, ele sempre foi mais que um mestre do Direito — foi, e é, meu pai. Cresci ouvindo seus conselhos, observando seu exemplo e aprendendo que a verdadeira grandeza de um profissional está na humildade, no estudo contínuo e no respeito às pessoas. O que ele ensinava em sala de aula, vivia intensamente em casa e nos trabalhos perante a Justiça.
+                                Em 2017, ainda no décimo período da faculdade, após a aprovação no exame da OAB, recebi de suas mãos a tão almejada carteira de advogado. Foi um dos momentos mais marcantes da minha vida. A partir dali, não havia outro caminho a seguir: decidi trilhar seus passos, especializando-me em Direito e Processo do Trabalho e assumindo, com honra, a responsabilidade de dar continuidade ao legado que ele construiu.
+                                Hoje, mesmo aposentado do magistério, o Dr. Arimatéia permanece ao meu lado, não apenas como mentor, mas como parceiro — em uma jornada que é profissional, mas também profundamente afetiva. Pai e filho, unidos pela mesma vocação.
+                                Nosso escritório carrega esse legado com orgulho. Atuamos nas causas do Direito do Trabalho e do Direito Civil em todos os graus de jurisdição da capital federal com técnica, ética e, sobretudo, humanidade. Porque acreditamos que Justiça só se faz com verdade, compromisso e coração.
+                                
+                                Marcelo Andreolli
+                                Advogado | Especialista em Direito e Processo do Trabalho</p>
                         </div>
                     </div>
                     
@@ -100,12 +108,12 @@
                         <h5 class="mb-0 text-white">ÁREAS DE ATUAÇÃO</h5>
                         <div class="line"></div>
                         <ul>
-                            <li><a href="#">Direito do Trabalho - Pró Empregado</a></li>
-                            <li><a href="#">Direito do Trabalho - Patronal</a></li>
-                            <li><a href="#">Direito da Família</a></li>
-                            <li><a href="#">Direito Imobiliário</a></li>
-                            <li><a href="#">Direito Sucessório</a></li>
-                            <li><a href="#">Relações Comerciais e Contratuais</a></li>
+                            <li><a href="areas-atuacao.html">Direito do Trabalho - Pró Empregado</a></li>
+                            <li><a href="areas-atuacao.html">Direito do Trabalho - Patronal</a></li>
+                            <li><a href="areas-atuacao.html">Direito da Família</a></li>
+                            <li><a href="areas-atuacao.html">Direito Imobiliário</a></li>
+                            <li><a href="areas-atuacao.html">Direito Sucessório</a></li>
+                            <li><a href="areas-atuacao.html">Relações Comerciais e Contratuais</a></li>
                         </ul>
                     </div>
                     <div class="col-lg-3 col-sm-6">
