versão final (beta)

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
-                            <img src="./assets/images/marcelo_andreolli_02.jpg" alt="">
+                            <img src="./assets/images/marcelo_andreolli_03.jpg" alt="">
                         </div>
                         <div class="team-member-content">
                             <h4 class="text-white">Dr. Marcelo Andreolli</h4>
@@ -174,7 +174,7 @@
             <div class="row justify-content-center" data-aos="fade-down" data-aos-delay="250">
                 <div class="col-lg-8">
                     <form id="contactForm" class="row g-3 p-lg-5 p-4 bg-white theme-shadow">
-                        <a href="" class="btn btn-success">Entre em contato conosco pelo Whatsapp <i class="bi bi-whatsapp"></i></a>
+                        <a href="https://wa.me/5561999044771" class="btn btn-success">Entre em contato conosco pelo Whatsapp <i class="bi bi-whatsapp"></i></a>
                         <hr>
                         <p>Ou nos envie um e-mail:</p>
                         <div class="error alert alert-danger">Por favor, preencha o assunto e a mensagem.</div>
