--- a/contato.html
+++ b/contato.html
@@ -66,7 +66,7 @@
             <div class="row justify-content-center" data-aos="fade-down" data-aos-delay="250">
                 <div class="col-lg-8">
                     <form id="contactForm" class="row g-3 p-lg-5 p-4 bg-white theme-shadow">
-                        <a href="" class="btn btn-success">Entre em contato conosco pelo Whatsapp <i class="bi bi-whatsapp"></i></a>
+                        <a href="https://wa.me/5561999044771" class="btn btn-success">Entre em contato conosco pelo Whatsapp <i class="bi bi-whatsapp"></i></a>
                         <hr>
                         <p>Ou nos envie um e-mail:</p>
                         <div class="error alert alert-danger">Por favor, preencha o assunto e a mensagem.</div>
